2010-04-08  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* doc/install.texi (Specific, i?86-*-solaris2.10): Fix grammar.
	(Specific, *-*-solaris2*): Likewise.
	Don't prefer Sun as over GNU as.

2010-04-08  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/43679
	* tree-ssa-pre.c (eliminate): Only propagate copies.

2010-04-08  Jakub Jelinek  <jakub@redhat.com>

	PR debug/43670
	* cfgexpand.c (expand_debug_expr): If for non-NULL offset
	op0 is not a MEM, just return NULL instead of assertion
	failure.
	(discover_nonconstant_array_refs): Don't walk debug stmts.

2010-04-07  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/43668
	* config/i386/i386.c (setup_incoming_varargs_64): Align stack to
	16byte for FP register save area.

2010-04-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/install.texi (Configuration): Move description of
	--enable-lto, --with-libelf*, --enable-gold from Java section to
	general section.

	* doc/generic.texi (Working with declarations)
	(Function Properties, C and C++ Trees): Fix typos.
	* doc/sourcebuild.texi (Top Level): Likewise.

2010-04-07  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* config.gcc (i[34567]86-*-solaris2*): Default with_tune_32 to
	generic.

2010-04-06  Jakub Jelinek  <jakub@redhat.com>

	PR target/43667
	* config/i386/i386.c (bdesc_multi_arg): Use OPTION_MASK_ISA_XOP
	instead of OPTION_MASK_ISA_AVX for __builtin_ia32_vpermil2p*.
	(ix86_expand_args_builtin): Use V*_FTYPE_* enum codes instead of
	MULTI_* defines for 4 argument vpermil2p* builtins.

2010-04-06  Joseph Myers  <joseph@codesourcery.com>

	* doc/invoke.texi, doc/standards.texi: Refer to
	gcc-4.5/c99status.html.

2010-04-06  Jakub Jelinek  <jakub@redhat.com>

	PR target/43638
	* config/i386/i386.c (print_operand): Remove 'e' and 'E' code
	handling.

2010-04-06  Richard Guenther  <rguenther@suse.de>

	PR middle-end/43661
	* fold-const.c (fold_comparison): Handle X * 0 CMP 0.

2010-04-05  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
