@@ -1,3 +1,8 @@
+2010-04-08  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
+
+	PR target/43643
+	* gcc.dg/pr43643.c: New test.
+
 2010-04-08  Richard Guenther  <rguenther@suse.de>
 
 	PR tree-optimization/43679
